--- a/admin/css/manage-events.css
+++ b/admin/css/manage-events.css
@@ -71,21 +71,25 @@
 }
 
 /* Icon-only action button (trash) sized to host a dashicon. */
-.lrob-manage-icon-btn {
-    display: inline-grid;
-    place-items: center;
+.lrob-manage-actions .lrob-manage-icon-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
     width: 30px;
     height: 30px;
-    padding: 0;
+    min-width: 0;
     min-height: 0;
-    line-height: 1;
+    padding: 0;
+    line-height: 0;
 }
-.lrob-manage-icon-btn .dashicons {
+.lrob-manage-actions .lrob-manage-icon-btn .dashicons {
     font-size: 16px;
     width: 16px;
     height: 16px;
-    line-height: 1;
+    line-height: 16px;
     margin: 0;
+    vertical-align: middle;
 }
 .lrob-manage-del:hover {
     color: #b32d2e;
